# doc_to_readme

./: .gitignore  .gitlab-ci.yml  How_to_setup_the_pipelines.md  LICENSE  README.md  action.yml  azure-pipelines.yaml  bitbucket-pipelines.yml  main.py  pyproject.toml
.github/workflows/: publish.yml  python-package.yml  test-python-package.yml  update_readme.yml  update_readme_github.yml
docu/: How_to_setup_the_pipelines.md
src/: classes.py  doc_to_md.py  functions.py  general_functions.py  run_qc_checks.py
src/doc_to_md/: __init__.py  doc_to_md.py
templates/: .update_readme_gitlab.yml
tests/: test.py  test_dtm.py
