[build-system]
requires = ["setuptools >=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "doc-to-readme"
version = "1.0.0"
authors = [
    { name="Mirjam Ziselsberger", email="ziselsberger@gmail.com" },
]
description = "Automated Python Module Documentation in Markdown File (README)"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license.file = "LICENSE"

[project.urls]
"Homepage" = "https://github.com/ziselsberger/doc_to_readme"
"Bug Tracker" = "https://github.com/ziselsberger/doc_to_readme/issues"